src/objects/Industry_Trend__c.object
<CustomObject>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentarios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipName>IndustryTrends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>RelatedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relacionado con</label>
        <referenceTo>Industry_Trend__c</referenceTo>
        <relationshipName>RelatedTos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industria y Comercio</fullName>
                </value>
                <value>
                    <fullName>Financiero</fullName>
                </value>
                <value>
                    <fullName>Administración pública</fullName>
                </value>
                <value>
                    <fullName>Salud, Educación y Seguridad</fullName>
                </value>
                <value>
                    <fullName>Servicios y Tecnología</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Título</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trend__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contexto General</fullName>
                </value>
                <value>
                    <fullName>Métricas y Análisis del Mercado</fullName>
                </value>
                <value>
                    <fullName>Principales Players</fullName>
                </value>
                <value>
                    <fullName>Cadena de Valor y Procesos</fullName>
                </value>
                <value>
                    <fullName>Tendencias</fullName>
                </value>
                <value>
                    <fullName>Principales necesidades</fullName>
                </value>
                <value>
                    <fullName>Oportunidad Sectorial</fullName>
                </value>
                <value>
                    <fullName>Soluciones</fullName>
                </value>
                <value>
                    <fullName>Casos de éxito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Attachment__c</fullName>
        <label>URL Attachment</label>
        <type>Url</type>
    </fields>
    <label>Industry Trend</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Trends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>